"""Initial schema creation

Revision ID: 74a21c4b4cc5
Revises: 
Create Date: 2026-08-03 12:43:59.872600

"""
from typing import Sequence, Union

from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision: str = '74a21c4b4cc5'
down_revision: Union[str, Sequence[str], None] = None
branch_labels: Union[str, Sequence[str], None] = None
depends_on: Union[str, Sequence[str], None] = None


def upgrade() -> None:
    """Upgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('department',
    sa.Column('dep_id', sa.UUID(), nullable=False),
    sa.Column('dep_name', sa.String(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('dep_id')
    )
    op.create_table('error_log',
    sa.Column('log_id', sa.UUID(), nullable=False),
    sa.Column('file_name', sa.String(), nullable=False),
    sa.Column('function_name', sa.String(), nullable=False),
    sa.Column('status_code', sa.Integer(), nullable=False),
    sa.Column('log_data', sa.String(), nullable=False),
    sa.Column('error_details', sa.String(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.PrimaryKeyConstraint('log_id')
    )
    op.create_table('employee',
    sa.Column('emp_id', sa.UUID(), nullable=False),
    sa.Column('email_id', sa.String(), nullable=False),
    sa.Column('phone_number', sa.String(), nullable=False),
    sa.Column('dep_id', sa.UUID(), nullable=True),
    sa.Column('role', sa.Enum('admin', 'manager', 'employee', name='employee_role_enum'), nullable=True),
    sa.Column('manager_id', sa.UUID(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['dep_id'], ['department.dep_id'], ),
    sa.ForeignKeyConstraint(['manager_id'], ['employee.emp_id'], ),
    sa.PrimaryKeyConstraint('emp_id'),
    sa.UniqueConstraint('email_id')
    )
    op.create_table('leave_management',
    sa.Column('leave_id', sa.UUID(), nullable=False),
    sa.Column('emp_id', sa.UUID(), nullable=True),
    sa.Column('leave_type', sa.String(), nullable=False),
    sa.Column('status', sa.Enum('pending', 'approved', 'rejected', name='leave_status_enum'), nullable=True),
    sa.Column('start_date', sa.DateTime(), nullable=True),
    sa.Column('leave_reason', sa.String(), nullable=False),
    sa.Column('end_date', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['emp_id'], ['employee.emp_id'], ),
    sa.PrimaryKeyConstraint('leave_id')
    )
    op.create_table('leave_quote',
    sa.Column('quote_id', sa.UUID(), nullable=False),
    sa.Column('emp_id', sa.UUID(), nullable=True),
    sa.Column('sick_leave_allocated', sa.Integer(), nullable=False),
    sa.Column('casual_leave_allocated', sa.Integer(), nullable=False),
    sa.Column('casual_leave_remaining', sa.Integer(), nullable=False),
    sa.Column('year', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['emp_id'], ['employee.emp_id'], ),
    sa.PrimaryKeyConstraint('quote_id')
    )
    op.create_table('log_attendance',
    sa.Column('log_id', sa.UUID(), nullable=False),
    sa.Column('emp_id', sa.UUID(), nullable=True),
    sa.Column('log_in_time', sa.DateTime(), nullable=True),
    sa.Column('log_out_time', sa.DateTime(), nullable=True),
    sa.Column('status', sa.Enum('present', 'absent', 'half-day', name='attendance_status_enum'), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.Column('updated_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['emp_id'], ['employee.emp_id'], ),
    sa.PrimaryKeyConstraint('log_id')
    )
    # ### end Alembic commands ###


def downgrade() -> None:
    """Downgrade schema."""
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('log_attendance')
    op.drop_table('leave_quote')
    op.drop_table('leave_management')
    op.drop_table('employee')
    op.drop_table('error_log')
    op.drop_table('department')
    # ### end Alembic commands ###
